Wed Jan 16 01:34:09 GMT 2013  Olly Betts <olly@survex.com>

	* java/run-java-test: Document how to run tests under gdb.

Wed Jan 16 01:30:28 GMT 2013  Olly Betts <olly@survex.com>

	* java/Makefile.am: Don't automatically pass -g to javac when in
	  maintainer-mode, as the two should really be orthogonal.  Instead
	  use JAVACFLAGS when running JAVAC to allow extra flags to be
	  specified by running "make JAVACFLAGS=-g".

Wed Jan 09 11:57:01 GMT 2013  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog and 1.2 branch.

Mon Dec 24 05:15:56 GMT 2012  Olly Betts <olly@survex.com>

	* perl/Search/Xapian/Stem.pm: Fix documentation typo.

Mon Dec 24 05:15:12 GMT 2012  Olly Betts <olly@survex.com>

	* perl/util.i.in: Update list of unwrapped things.

Mon Dec 24 04:42:42 GMT 2012  Olly Betts <olly@survex.com>

	* perl/Makefile.am,perl/t/stem.t: Add test that we can create all the
	  stemmers returned by Stem::get_available_languages().

Mon Dec 17 02:13:16 GMT 2012  Olly Betts <olly@survex.com>

	* README,php/docs/index.html: Bump minimum supported PHP version to
	  5.3 - 5.2 was officially EOLed 2011-01-06, and the only distros
	  which seem to still have PHP 5.2 are Ubuntu hardy (which will reach
	  EOL in April 2013) and older probably RHEL (which are aimed at the
	  ultra-conservative types who would likely be happy to stick with
	  Xapian 1.2 anyway.

Sat Oct 13 04:28:16 GMT 2012  Olly Betts <olly@survex.com>

	* perl/t/databasemodified.t,perl/t/index.t,perl/t/parser.t: Using
	  UNIVERSAL::isa() as a function is deprecated.

Sat Oct 13 02:57:22 GMT 2012  Olly Betts <olly@survex.com>

	* perl/t/parser.t: Forward port tests of StringValueRangeProcessor
	  with a prefix or suffix from 1.2's XS Search::Xapian.  (ticket#607)

Tue Aug 28 04:33:21 GMT 2012  Dan Colish <dcolish@gmail.com>

	* java/SmokeTest.java,java/java.i: Implement and test MSetIterator,
	  ESetIterator. Fix PostingIterator, ValueIterator, and TermIterator.
