@@ -1,3 +1,12 @@
+Wed Jan 16 01:41:33 GMT 2013  Olly Betts <olly@survex.com>
+
+	* configure.ac,generic/generic.mk: Improve workaround which allows
+	  building against an uninstalled xapian-core on OS X - this should
+	  now work with any uninstalled xapian-core (not only in a tree
+	  with the same layout as an SVN or git checkout) and it also won't
+	  try to build against "../xapian-core/.libs" just because it happens
+	  to exist.  (Fixes #322)
+
 Wed Jan 16 01:34:09 GMT 2013  Olly Betts <olly@survex.com>
 
 	* java/run-java-test: Document how to run tests under gdb.
